# c-game-tents

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.c  game_aux.c  game_test.c  game_text.c  game_tools.c  game_tools.h  sample.c  test_queue.c
data/: game_8x8_n4.tnt
