cmake_minimum_required(VERSION 2.6)
project(c-game-tents)

enable_testing()
include(CTest)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99 -g")
set(CMAKE_C_COMPILER gcc)

add_library(game game.c game_aux.c queue.c)

add_executable(game_text game_text.c) 
target_link_libraries(game_text game)

add_executable(game_test game_test.c)
target_link_libraries(game_test game)

add_test(game_new ./game_test game_new)
add_test(game_new_empty ./game_test game_new_empty)
add_test(game_copy ./game_test game_copy)
add_test(game_equal ./game_test game_equal)
add_test(game_set_square ./game_test game_set_square)
add_test(game_get_square ./game_test game_get_square)
add_test(game_set_expected_nb_tents_row ./game_test game_set_expected_nb_tents_row)
add_test(game_set_expected_nb_tents_col ./game_test game_set_expected_nb_tents_col)
add_test(game_get_expected_nb_tents_row ./game_test game_get_expected_nb_tents_row)
add_test(game_get_expected_nb_tents_col ./game_test game_get_expected_nb_tents_col)
add_test(game_get_expected_nb_tents_all ./game_test game_get_expected_nb_tents_all)
add_test(game_get_current_nb_tents_row ./game_test game_get_current_nb_tents_row)
add_test(game_get_current_nb_tents_col ./game_test game_get_current_nb_tents_col)
add_test(game_get_current_nb_tents_all ./game_test game_get_current_nb_tents_all)
add_test(game_play_move ./game_test game_play_move)
add_test(game_check_move_1 ./game_test game_check_move_1)
add_test(game_check_move_2 ./game_test game_check_move_2)
add_test(game_is_over ./game_test game_is_over)
add_test(game_fill_grass_row ./game_test game_fill_grass_row)
add_test(game_fill_grass_col ./game_test game_fill_grass_col)
add_test(game_restart ./game_test game_restart)
add_test(game_print ./game_test game_print)
add_test(game_default ./game_test game_default)
add_test(game_default_solution ./game_test game_default_solution)

add_library(queue queue.c)
add_executable(sample sample.c)
target_link_libraries(sample queue game)
add_executable(test_queue test_queue.c)
target_link_libraries(test_queue queue)

add_test(test_queue_new_free ./test_queue init_free)
add_test(test_queue_push_head ./test_queue push_head)
add_test(test_queue_pop_head ./test_queue pop_head)
add_test(test_queue_push_tail ./test_queue push_tail)
add_test(test_queue_pop_tail ./test_queue pop_tail)
add_test(test_queue_length ./test_queue length)
add_test(test_queue_empty ./test_queue empty)
add_test(test_queue_clear ./test_queue clear)

